# say-bot

./: LICENSE.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: main.py
